--- a/src/main/resources/templates/post/postModal.html
+++ b/src/main/resources/templates/post/postModal.html
@@ -8,18 +8,24 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <div class="modal fade" id="postModal" role="dialog" th:fragment="modalContents">
+    <div class="modal fade" id="postModal" role="dialog" th:fragment="modalContents" style="height: 100vh; overflow: auto;">
        <div class="post_pop_card">
             <div class="model-body">
                 <div class="grid-wrapper">
                     <div class="col-one">
-                        <div class="postimg">
-                            <img alt="post" th:src="@{post.photo.path}">
+                        <div class="postimg" th:if="${isVideo}" style="height: 100%;">
+                            <video id="divVideo" controls="controls" style="width: 100%; height: 100%">
+                                <source th:src="@{${post.photo.path}}" type="video/mp4">
+                                Your browser does not support the HTML5 Video element.
+                            </video>
+                        </div>
+                        <div class="postimg" th:unless="${isVideo}">
+                            <img alt="post" th:src="@{${post.photo.path}}">
                         </div>
                     </div>
                     <div class="col-two">
                         <div class="">
-                            <img class="smallImg"  th:src="@{user.profile.photo.path}"/>
+                            <img class="smallImg" th:src="@{user.profile.photo.path}"/>
                             <span th:text="${user.username}"></span>
                             <div class="date" th:text="${post.created}"></div>
                             <div th:text="${post.description}"></div>
