--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -159,14 +159,14 @@
 
         <div id="slidePost1" class="slidePost">
             <div class="navigation-right-middle">
-                <a href="#">
+                <a href="/postVideo">
                     <div class="navigation-button">
                         <img class="icon" th:src="@{/Icons/videoSVG.svg}" alt="">
                     </div>
                 </a>
             </div>
             <div class="navigation-right-top">
-                <a href="#">
+                <a href="/postPhoto">
                     <div class="navigation-button">
                         <img class="icon" th:src="@{/Icons/imageSVG.svg}" alt="">
                     </div>
@@ -175,12 +175,13 @@
         </div>
 
         <div class="slideNotification">
+            
             <div class="slideNotification-unSeenContainer">
 
             </div>
             <div class="seperator"></div>
             <div class="slideNotification-SeenContainer">
-                
+
             </div>
         </div>
     </div>
