--- a/src/main/resources/templates/admin/adminUsers.html
+++ b/src/main/resources/templates/admin/adminUsers.html
@@ -8,9 +8,20 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>Admin panel</title>
-    <!--    <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"-->
-    <!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-    <style>.mr5{display: inline-block; margin-right: 15px;}</style>
+    <style>
+        .mr5 {
+            display: inline-block;
+            margin-right: 15px;
+        }
+
+        .mt40 {
+            margin-top: 20px;
+        }
+
+        .pb40 {
+            padding-top: 20px;
+        }
+    </style>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
@@ -29,7 +40,12 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link active" href="/admin">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-home">
+                                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                            </svg>
                             Home <span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -42,7 +58,8 @@
                                 <circle cx="9" cy="7" r="4"></circle>
                                 <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                            </svg>     User
+                            </svg>
+                            User
                         </a>
                     </li>
                     <li class="nav-item">
@@ -53,7 +70,8 @@
                                 <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
                                 <polyline points="2 17 12 22 22 17"></polyline>
                                 <polyline points="2 12 12 17 22 12"></polyline>
-                            </svg>      Post
+                            </svg>
+                            Post
                         </a>
                     </li>
                     <li class="nav-item">
@@ -63,7 +81,8 @@
                                  stroke-linejoin="round" class="feather feather-file">
                                 <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
                                 <polyline points="13 2 13 9 20 9"></polyline>
-                            </svg>  Advertisements
+                            </svg>
+                            Advertisements
                         </a>
                     </li>
 
@@ -71,8 +90,10 @@
             </div>
         </nav>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h2>Users List</h2>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pb40">
+            <h2  th:text="#{message.admin.userListTitle}" class="mt40"/>
+            <span>Total User = </span>
+            <span th:text="${users.size()}"> </span>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
@@ -83,6 +104,7 @@
                         <th>Created Date</th>
                         <th>Follower</th>
                         <th>Following</th>
+                        <th>Post Count</th>
                         <th>Status</th>
                         <th>Action</th>
                     </tr>
@@ -91,14 +113,15 @@
                     <tr th:each="usere: ${users}" class="userList" align="center">
                         <td th:text="${usere.id}"/>
                         <td th:text="${usere.getUsername()}"/>
-                        <td >
-<!--                            <div th:if="${usere.getRole() != null}">-->
+                        <td>
+                            <!--                            <div th:if="${usere.getRole() != null}">-->
                             <span th:each="role: ${usere.getRole()}" th:text="${role.getRoleName()}" class="mr5"></span>
-<!--                            </div>-->
+                            <!--                            </div>-->
                         </td>
                         <td th:text="${usere.createdDate}"/>
                         <td th:text="${usere.getFollowedUsers().size()}"/>
                         <td th:text="${usere.getFollowingUser().size()}"/>
+                        <td th:text="${usere.postList.size()}"/>
                         <td class="user-status" th:text="${(usere.status) ? 'Active' : 'Inactive'}"/>
                         <td>
                             <input type="button" class="userStatus" th:userId="${usere.id}" value="Active/Deactivate">
@@ -107,6 +130,21 @@
                     </tr>
                     </tbody>
                 </table>
+                <div class="pagination-div">
+                    <span th:if="${userPages.hasPrevious()}">
+                        <a th:href="@{/admin/users(page=${userPages.number-1},size=${userPages.size})}">Previous</a>
+                     </span>
+                    <th:block th:each="i: ${#numbers.sequence(0, userPages.totalPages - 1)}">
+                        <span th:if="${userPages.number == i}" class="selected">[[${i}+1]]</span>
+                        <span th:unless="${userPages.number == i}">
+                            <a th:href="@{/admin/users(page=${i},size=${userPages.size})}">[[${i}+1]]</a>
+                        </span>
+                    </th:block>
+                    <span th:if="${userPages.hasNext()}">
+                        <a th:href="@{/admin/users(page=${userPages.number+1},size=${userPages.size})}">Next</a>
+                    </span>
+                </div>
+
             </div>
         </main>
     </div>
@@ -117,7 +155,7 @@
 
 <script>
     $(document).ready(function () {
-        $(".userStatus").on('click',function() {
+        $(".userStatus").on('click', function () {
             console.log($(this).attr("userId"));
             let selector = $(this);
             $.ajax({
@@ -128,7 +166,7 @@
                     console.log(selector);
                     selector.parent().parent().find(".user-status").text(response);
                 },
-                error: function(error) {
+                error: function (error) {
                     console.log(error);
                 }
             });
