--- a/src/main/resources/templates/admin/viewPost.html
+++ b/src/main/resources/templates/admin/viewPost.html
@@ -8,13 +8,16 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <title>Admin panel</title>
-    <style>
+    <style>.mr5 {
+        display: inline-block;
+        margin-right: 15px;
+
+    }
+
         .pagination-div{user-select: none;}
         .pagination-div span{border-radius:3px;border:1px solid #999;
             padding:5px;margin:10px 0px 0px 10px;display:inline-block}
         span.selected{background:#ccf;}
-        .mt40{margin-top:20px;}
-        .pb40{padding-top: 20px;}
     </style>
 </head>
 <body>
@@ -34,7 +37,12 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a class="nav-link active" href="/admin">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+                                 fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                                 stroke-linejoin="round" class="feather feather-home">
+                                <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+                                <polyline points="9 22 9 12 15 12 15 22"></polyline>
+                            </svg>
                             Home <span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -47,7 +55,8 @@
                                 <circle cx="9" cy="7" r="4"></circle>
                                 <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                            </svg>     User
+                            </svg>
+                            User
                         </a>
                     </li>
                     <li class="nav-item">
@@ -58,7 +67,8 @@
                                 <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
                                 <polyline points="2 17 12 22 22 17"></polyline>
                                 <polyline points="2 12 12 17 22 12"></polyline>
-                            </svg>      Post
+                            </svg>
+                            Post
                         </a>
                     </li>
                     <li class="nav-item">
@@ -68,7 +78,8 @@
                                  stroke-linejoin="round" class="feather feather-file">
                                 <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
                                 <polyline points="13 2 13 9 20 9"></polyline>
-                            </svg>  Advertisements
+                            </svg>
+                            Advertisements
                         </a>
                     </li>
 
@@ -76,78 +87,78 @@
             </div>
         </nav>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pb40">
-            <h2 th:text="#{message.admin.postListTitle}" class="mt40"/>
-            <span>Total Post = </span>
-            <span th:text="${posts.size()}"> </span>
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <h4 align="center">Post Information</h4>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr align="center">
                         <th>Post Id</th>
+                        <th>Photo </th>
                         <th>Title</th>
                         <th>Date</th>
                         <th>User Id</th>
-                        <th>Comment Count</th>
                         <th>Unhealthy</th>
                         <th>Status</th>
-                        <th>Action</th>
                     </tr>
                     </thead>
                     <tbody>
-                    <tr th:each="postpage: ${postPages}" class="postList" align="center">
-                        <td th:text="${postpage.id}" />
-                        <td th:text="${postpage.title}" />
-                        <td th:text="${postpage.commentList.size()}" />
-                        <td th:text="${postpage.getUser() != null ? postpage.getUser().getId() : 'No userId'}" />
-                        <td th:text="${postpage.created}" />
-                        <td th:text="${(postpage.isUnhealthy) ? 'Yes' : 'No'}"></td>
-                        <td th:text="${postpage.status}" class="status"></td>
-                        <td>
-                        <input type="button" class="submit" th:postId="${postpage.id}" value="Disable/Enable">
-                            <a th:href="'/admin/posts/' + ${postpage.id}" th:text="View"></a>
-                        </td>
+                    <tr th:each="post: ${post}" class="postList" align="center">
+                        <td th:text="${post.id}"/>
+                        <td th:text="${post.photo}"/>
+                        <td th:text="${post.title}"/>
+                        <td th:text="${post.created}"/>
+                        <td th:text="${post.getUser() != null ? post.getUser().getId() : 'No userId'}"/>
+                        <td th:text="${(post.isUnhealthy) ? 'Yes' : 'No'}"></td>
+                        <td th:text="${post.status}" class="status"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <br>
+
+            <span>Comment Lists : total = </span>
+            <span th:text="${post.commentList.size()}"> </span>
+            <div class="table-responsive">
+                <table class="table table-striped table-sm">
+                    <thead>
+                    <tr align="center">
+                        <th>Comment Id</th>
+                        <th>Description</th>
+                        <th>Created Date</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="comment: ${commentPages}" class="commentList" align="center">
+                        <td th:text="${comment.id}"/>
+                        <td th:text="${comment.description}"/>
+                        <td th:text="${comment.created}"/>
                     </tr>
                     </tbody>
                 </table>
                 <div class="pagination-div">
-                    <span th:if="${postPages.hasPrevious()}">
-                        <a th:href="@{/admin/posts(page=${postPages.number-1},size=${postPages.size})}">Previous</a>
-                     </span>
-                    <th:block th:each="i: ${#numbers.sequence(0, postPages.totalPages - 1)}">
-                        <span th:if="${postPages.number == i}" class="selected">[[${i}+1]]</span>
-                        <span th:unless="${postPages.number == i}">
-                            <a th:href="@{/admin/posts(page=${i},size=${postPages.size})}">[[${i}+1]]</a>
-                        </span>
+                        <span th:if="${commentPages.hasPrevious()}">
+                            <a th:href="'/admin/posts/' + ${post.id} + '?page=' + ${commentPages.number-1} + '&size=' + ${commentPages.size}">Previous</a>
+
+                         </span>
+                    <th:block th:each="i: ${#numbers.sequence(0, commentPages.totalPages - 1)}">
+                        <span th:if="${commentPages.number == i}" class="selected">[[${i}+1]]</span>
+                        <span th:unless="${commentPages.number == i}">
+<!--                                <a th:href="@{/admin/users/(${user.id})(page=${i},size=${postPages.size})}">[[${i}+1]]</a>-->
+                                <a th:href="'/admin/posts/' + ${post.id} + '?page=' + ${i} + '&size=' + ${commentPages.size}">[[${i}+1]]</a>
+                            </span>
                     </th:block>
-                    <span th:if="${postPages.hasNext()}">
-                        <a th:href="@{/admin/posts(page=${postPages.number+1},size=${postPages.size})}">Next</a>
-                    </span>
+                    <span th:if="${commentPages.hasNext()}">
+
+                            <a th:href="'/admin/posts/' + ${post.id} + '?page=' + ${commentPages.number+1} + '&size=' + ${commentPages.size}">Next</a>
+                        </span>
                 </div>
+
+            </div>
         </main>
     </div>
 </div>
 </div>
 </body>
-</html>
 
-<script>
-    $(document).ready(function () {
-        $(".submit").on('click',function() {
-            console.log($(this).attr("postId"));
-            let selector = $(this);
-            $.ajax({
-                url: "/updatePostStatus",
-                type: "POST",
-                data: {postId: $(this).attr("postId")},
-                success: function (response) {
-                    console.log(selector);
-                    selector.parent().parent().find(".status").text(response);
-                },
-                error: function(error) {
-                    console.log(error);
-                }
-            });
-        });
-    });
-</script>
+</html>
