--- a/src/main/resources/templates/post/postPhoto.html
+++ b/src/main/resources/templates/post/postPhoto.html
@@ -62,6 +62,10 @@
         <div class="" style="color: red;">
             <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"> # </p>
         </div>
+        <div class="form-check" style="margin-bottom: 20px;">
+            <input type="checkbox" class="form-check-input" name="notifyFollowers" id="notifyFollowers">
+            <label class="form-check-label" for="notifyFollowers" th:text="#{message.post.checkbox}"></label>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
