--- a/src/main/resources/templates/post/postVideo.html
+++ b/src/main/resources/templates/post/postVideo.html
@@ -68,7 +68,7 @@
             <input type="checkbox" class="form-check-input" name="notifyFollowers" id="notifyFollowers">
             <label class="form-check-label" for="notifyFollowers" th:text="#{message.post.checkbox}"></label>
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary" th:text="#{message.post.submit}"></button>
     </form>
 </div>
 </body>
