--- a/src/main/resources/templates/admin/adminAds.html
+++ b/src/main/resources/templates/admin/adminAds.html
@@ -6,16 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Admin panel</title>
-    <!--    <link href="/docs/4.4/dist/css/bootstrap.min.css" rel="stylesheet"-->
-    <!--          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
+    <title th:text="#{message.admin.panel}"/>
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Menu</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><span th:text="#{message.admin.menu}"/> </a>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">You signed as Admin</a>
+            <a class="nav-link" href="#"><span th:text="#{message.admin.signed}"/> </a>
         </li>
     </ul>
 </nav>
@@ -28,7 +26,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/admin">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                            Home <span class="sr-only">(current)</span>
+                            <span th:text="#{message.admin.home}"/>  <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -40,8 +38,7 @@
                                 <circle cx="9" cy="7" r="4"></circle>
                                 <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                            </svg>
-                            User
+                            </svg>     <span th:text="#{message.admin.user}"/>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -52,8 +49,7 @@
                                 <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
                                 <polyline points="2 17 12 22 22 17"></polyline>
                                 <polyline points="2 12 12 17 22 12"></polyline>
-                            </svg>
-                            Post
+                            </svg>      <span th:text="#{message.admin.post}"/>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -63,8 +59,7 @@
                                  stroke-linejoin="round" class="feather feather-file">
                                 <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
                                 <polyline points="13 2 13 9 20 9"></polyline>
-                            </svg>
-                            Advertisements
+                            </svg>  <span th:text="#{message.admin.ads}"/>
                         </a>
                     </li>
 
@@ -73,24 +68,24 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            <h2>Advertisement</h2>
-               <input type="button" onclick="window.location.href = '/ads'" value="Add Ads">
+            <h2 th:text="#{message.admin.ads}" />
+               <input type="button" onclick="window.location.href = '/ads'" th:value="#{message.admin.addAds}">
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr align="center">
-                        <th rowspan="2" align="center">Ads Id</th>
-                        <th rowspan="2">Title</th>
-                        <th rowspan="2">URL</th>
-                        <th rowspan="2">Status</th>
-                        <th rowspan="2">Date</th>
-                        <th colspan="2" align="center">Target Age</th>
-                        <th rowspan="2">Country</th>
-                        <th rowspan="2">Gender</th>
+                        <th rowspan="2" align="center" th:text="#{message.admin.adsId}"/>
+                        <th rowspan="2" th:text="#{message.admin.title}"/>
+                        <th rowspan="2" th:text="#{message.admin.url}"/>
+                        <th rowspan="2" th:text="#{message.admin.status}"/>
+                        <th rowspan="2" th:text="#{message.admin.date}"/>
+                        <th colspan="2" align="center" th:text="#{message.admin.age}"/>
+                        <th rowspan="2" th:text="#{message.admin.country}"/>
+                        <th rowspan="2" th:text="#{message.admin.gender}"/>
                     </tr>
                     <tr align="center">
-                        <td>Min</td>
-                        <td>Max</td>
+                        <td th:text="#{message.admin.min}"/>
+                        <td th:text="#{message.admin.max}"/>
                     </tr>
                     </thead>
                     <tbody>
