--- a/src/main/resources/templates/admin/adminPosts.html
+++ b/src/main/resources/templates/admin/adminPosts.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <title>Admin panel</title>
+    <title th:text="#{message.admin.panel}"/>
     <style>
         .pagination-div{user-select: none;}
         .pagination-div span{border-radius:3px;border:1px solid #999;
@@ -19,10 +19,10 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Menu</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><span th:text="#{message.admin.menu}"/> </a>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">You signed as Admin</a>
+            <a class="nav-link" href="#"><span th:text="#{message.admin.signed}"/> </a>
         </li>
     </ul>
 </nav>
@@ -35,7 +35,7 @@
                     <li class="nav-item">
                         <a class="nav-link active" href="/admin">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
-                            Home <span class="sr-only">(current)</span>
+                            <span th:text="#{message.admin.home}"/>  <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -47,7 +47,7 @@
                                 <circle cx="9" cy="7" r="4"></circle>
                                 <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
-                            </svg>     User
+                            </svg>     <span th:text="#{message.admin.user}"/>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -58,7 +58,7 @@
                                 <polygon points="12 2 2 7 12 12 22 7 12 2"></polygon>
                                 <polyline points="2 17 12 22 22 17"></polyline>
                                 <polyline points="2 12 12 17 22 12"></polyline>
-                            </svg>      Post
+                            </svg>      <span th:text="#{message.admin.post}"/>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -68,7 +68,7 @@
                                  stroke-linejoin="round" class="feather feather-file">
                                 <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
                                 <polyline points="13 2 13 9 20 9"></polyline>
-                            </svg>  Advertisements
+                            </svg>  <span th:text="#{message.admin.ads}"/>
                         </a>
                     </li>
 
@@ -78,20 +78,20 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pb40">
             <h2 th:text="#{message.admin.postListTitle}" class="mt40"/>
-            <span>Total Post = </span>
+            <span th:text="#{message.admin.total}"/> <span th:text="#{message.admin.post}"/> :
             <span th:text="${posts.size()}"> </span>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr align="center">
-                        <th>Post Id</th>
-                        <th>Title</th>
-                        <th>Date</th>
-                        <th>User Id</th>
-                        <th>Comment Count</th>
-                        <th>Unhealthy</th>
-                        <th>Status</th>
-                        <th>Action</th>
+                        <th th:text="#{message.admin.postId}"/>
+                        <th th:text="#{message.admin.title}"/>
+                        <th th:text="#{message.admin.date}"/>
+                        <th th:text="#{message.admin.userId}"/>
+                        <th th:text="#{message.admin.commentCount}"/>
+                        <th th:text="#{message.admin.health}"/>
+                        <th th:text="#{message.admin.status}"/>
+                        <th th:text="#{message.admin.action}"/>
                     </tr>
                     </thead>
                     <tbody>
@@ -112,7 +112,7 @@
                 </table>
                 <div class="pagination-div">
                     <span th:if="${postPages.hasPrevious()}">
-                        <a th:href="@{/admin/posts(page=${postPages.number-1},size=${postPages.size})}">Previous</a>
+                        <a th:href="@{/admin/posts(page=${postPages.number-1},size=${postPages.size})}" th:text="#{message.admin.prev}"></a>
                      </span>
                     <th:block th:each="i: ${#numbers.sequence(0, postPages.totalPages - 1)}">
                         <span th:if="${postPages.number == i}" class="selected">[[${i}+1]]</span>
@@ -121,7 +121,7 @@
                         </span>
                     </th:block>
                     <span th:if="${postPages.hasNext()}">
-                        <a th:href="@{/admin/posts(page=${postPages.number+1},size=${postPages.size})}">Next</a>
+                        <a th:href="@{/admin/posts(page=${postPages.number+1},size=${postPages.size})}" th:text="#{message.admin.next}"></a>
                     </span>
                 </div>
         </main>
