--- a/src/main/resources/templates/admin/adminUsers.html
+++ b/src/main/resources/templates/admin/adminUsers.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <title>Admin panel</title>
+    <title th:text="#{message.admin.panel}"/>
     <style>
         .mr5 {
             display: inline-block;
@@ -25,10 +25,10 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Menu</a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><span th:text="#{message.admin.menu}"/> </a>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">You signed as Admin</a>
+            <a class="nav-link" href="#"><span th:text="#{message.admin.signed}"/> </a>
         </li>
     </ul>
 </nav>
@@ -46,7 +46,7 @@
                                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
                             </svg>
-                            Home <span class="sr-only">(current)</span>
+                            <span th:text="#{message.admin.home}"/> <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -59,7 +59,7 @@
                                 <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
                                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
                             </svg>
-                            User
+                            <span th:text="#{message.admin.user}"/>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -71,7 +71,7 @@
                                 <polyline points="2 17 12 22 22 17"></polyline>
                                 <polyline points="2 12 12 17 22 12"></polyline>
                             </svg>
-                            Post
+                            <span th:text="#{message.admin.post}"/>
                         </a>
                     </li>
                     <li class="nav-item">
@@ -82,7 +82,7 @@
                                 <path d="M13 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V9z"></path>
                                 <polyline points="13 2 13 9 20 9"></polyline>
                             </svg>
-                            Advertisements
+                            <span th:text="#{message.admin.ads}"/>
                         </a>
                     </li>
 
@@ -91,22 +91,22 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4 pb40">
-            <h2  th:text="#{message.admin.userListTitle}" class="mt40"/>
-            <span>Total User = </span>
+            <h2 th:text="#{message.admin.userListTitle}" class="mt40"/>
+            <span th:text="#{message.admin.total}"/> <span th:text="#{message.admin.user}"/> :
             <span th:text="${users.size()}"> </span>
             <div class="table-responsive">
                 <table class="table table-striped table-sm">
                     <thead>
                     <tr align="center">
-                        <th>User Id</th>
-                        <th>User Name</th>
-                        <th>Role</th>
-                        <th>Created Date</th>
-                        <th>Follower</th>
-                        <th>Following</th>
-                        <th>Post Count</th>
-                        <th>Status</th>
-                        <th>Action</th>
+                        <th th:text="#{message.admin.userId}"/>
+                        <th th:text="#{message.admin.userName}"/>
+                        <th th:text="#{message.admin.role}"/>
+                        <th th:text="#{message.admin.date}"/>
+                        <th th:text="#{message.admin.follower}"/>
+                        <th th:text="#{message.admin.following}"/>
+                        <th th:text="#{message.admin.postCount}"/>
+                        <th th:text="#{message.admin.status}"/>
+                        <th th:text="#{message.admin.action}"/>
                     </tr>
                     </thead>
                     <tbody>
@@ -132,7 +132,8 @@
                 </table>
                 <div class="pagination-div">
                     <span th:if="${userPages.hasPrevious()}">
-                        <a th:href="@{/admin/users(page=${userPages.number-1},size=${userPages.size})}">Previous</a>
+                        <a th:href="@{/admin/users(page=${userPages.number-1},size=${userPages.size})}"><span
+                                th:text="#{message.admin.prev}"/></a>
                      </span>
                     <th:block th:each="i: ${#numbers.sequence(0, userPages.totalPages - 1)}">
                         <span th:if="${userPages.number == i}" class="selected">[[${i}+1]]</span>
@@ -141,7 +142,8 @@
                         </span>
                     </th:block>
                     <span th:if="${userPages.hasNext()}">
-                        <a th:href="@{/admin/users(page=${userPages.number+1},size=${userPages.size})}">Next</a>
+                        <a th:href="@{/admin/users(page=${userPages.number+1},size=${userPages.size})}"><span
+                                th:text="#{message.admin.next}"/></a>
                     </span>
                 </div>
 
