--- a/src/main/resources/templates/admin/adminBase.html
+++ b/src/main/resources/templates/admin/adminBase.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <nav class="navbar navbar-dark bg-dark shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><span th:text="#{message.admin.menu}"/> </a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/home"><span th:text="#{message.admin.menu}"/> </a>
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
             <a class="nav-link" href="#"><span th:text="#{message.admin.signed}"/> </a>
